--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -53,22 +53,61 @@
           <button type="button" class="login btn btn-outline-warning">
             Order
           </button>
-          <button type="button" class="login  btn btn-outline-warning">Join</button>
+          <button type="button" class="login btn btn-outline-warning">
+            Join
+          </button>
         </div>
       </div>
     </nav>
     <header>
       <div class="px-4 py-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Savor the <span>Freshness</span> <br>of Organic Goodness</font></font></h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">
+          <font style="vertical-align: inherit"
+            ><font style="vertical-align: inherit"
+              >Savor the <span>Freshness</span> <br />of Organic Goodness</font
+            ></font
+          >
+        </h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">We believe that healthy eating should be delicious and satisfying. Join us for a culinary experience that nourishes your body and delights your taste buds.</font></font></p>
+          <p class="lead mb-4">
+            <font style="vertical-align: inherit"
+              ><font style="vertical-align: inherit"
+                >We believe that healthy eating should be delicious and
+                satisfying. Join us for a culinary experience that nourishes
+                your body and delights your taste buds.</font
+              ></font
+            >
+          </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-lg px-4 gap-3"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Menu</font></font></button>
-            <button type="button" class="btn  btn-lg px-4"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Learn More</font></font></button>
+            <button type="button" class="btn btn-lg px-4 gap-3">
+              <font style="vertical-align: inherit"
+                ><font style="vertical-align: inherit">Menu</font></font
+              >
+            </button>
+            <button type="button" class="btn btn-lg px-4">
+              <font style="vertical-align: inherit"
+                ><font style="vertical-align: inherit">Learn More</font></font
+              >
+            </button>
           </div>
         </div>
       </div>
     </header>
 
+    <section class="foto">
+      <figure >
+        <img class="img-fluid" src="/img/unsplash_30kYZsukwsk.png" alt="foto" />
+      </figure>
+      <figure >
+        <img class="img-fluid" src="/img/unsplash_9jdyCy-bMC4.png" alt="foto" />
+      </figure>
+      <figure >
+        <img class="img-fluid" src="/img/unsplash_kvp1Ppohv9I.png" alt="foto" />
+      </figure>
+      <figure >
+        <img class="img-fluid" src="/img/unsplash_oaz0raysASk.png" alt="foto" />
+      </figure>
+    </section>
+    
   </body>
 </html>
