added new section

--- a/index.html
+++ b/index.html
@@ -95,19 +95,56 @@
     </header>
 
     <section class="foto">
-      <figure >
+      <figure>
         <img class="img-fluid" src="/img/unsplash_30kYZsukwsk.png" alt="foto" />
       </figure>
-      <figure >
+      <figure>
         <img class="img-fluid" src="/img/unsplash_9jdyCy-bMC4.png" alt="foto" />
       </figure>
-      <figure >
+      <figure>
         <img class="img-fluid" src="/img/unsplash_kvp1Ppohv9I.png" alt="foto" />
       </figure>
-      <figure >
+      <figure>
         <img class="img-fluid" src="/img/unsplash_oaz0raysASk.png" alt="foto" />
       </figure>
     </section>
-    
+
+    <section class="content2">
+      <article class="content">
+        <h1>
+          The Amazing Benefits of Choosing <span>Eco Eats</span> for Your Meals
+        </h1>
+
+        <p>
+          Choosing Eco Eats means nourishing your body with wholesome, organic
+          ingredients. Our meals not only support your health but also
+          contribute to a sustainable future.
+        </p>
+
+        <div>
+          <div>
+            <h4>Health Benefits</h4>
+            Enjoy nutrient-rich meals that boost your energy and support overall
+            wellness
+          </div>
+          <div>
+            <h4>Eco-Friendly Choices</h4>
+            Support sustainable farming practices and reduce your carbon
+            footprint with every bite.
+          </div>
+        </div>
+      </article>
+      <article class="content3">
+        <figure>
+          <img
+            src="/img/Highlight-Sparkle-1--Streamline-Beveled-Scribbles.png"
+            alt=""
+          />
+        </figure>
+        <figure>
+          <img src="/img/unsplash_Bo8zk1NObt8.png" alt="" />
+        </figure>
+      </article>
+    </section>
   </body>
 </html>
