added new section

--- a/index.html
+++ b/index.html
@@ -146,5 +146,102 @@
         </figure>
       </article>
     </section>
+    <section class="content4">
+      <h1>
+        At <span>Eco Eats</span>, we’re proud of our journey towards <br />
+        creating a healthier, more sustainable world.
+      </h1>
+      <div>
+        <div>
+          <h3>
+            <img src="/img/Vector (1).png" alt="" /> 100% Organic Certified
+          </h3>
+          <p>
+            We’ve achieved full organic certification, ensuring that every
+            <br />
+            ingredient we use is sustainably sourced and chemical-free.
+          </p>
+        </div>
+        <div>
+          <h3>
+            <img
+              src="/img/Smiley-Grinding--Streamline-Beveled-Scribbles.png"
+              alt=""
+            />
+            20,000+ Happy Customers
+          </h3>
+          <p>
+            Thousands of people have embraced a healthier lifestyle with our
+            fresh, organic meals. <br />
+            Join a growing community of health-conscious eaters!
+          </p>
+        </div>
+        <div>
+          <h3>
+            <img src="/img/Heart--Streamline-Beveled-Scribbles.png" alt="" /> 5
+            Tons of Plastic Saved
+          </h3>
+          <p>
+            Through our eco-friendly packaging and waste reduction
+            initiatives,<br />
+            we’ve saved over 5 tons of plastic from landfills.
+          </p>
+        </div>
+        <div>
+          <h3><img src="/img/Vector 2.png" alt="" /> 1,000 Meals Donated</h3>
+          <p>
+            We believe in giving back. We’ve donated over 1,000 meals to<br />
+            communities in need, ensuring everyone has access to nutritious
+            food.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="content5">
+      <article>
+        <h1>Why Choose <span>Eco Eats?</span></h1>
+        <p>
+          At Eco Eats, we believe that healthy eating should never compromise on
+          flavor. Our dishes are crafted from sustainably sourced ingredients,
+          ensuring that every bite is not only delicious but also good for the
+          planet. Join us in our mission to promote wellness through nutritious
+          meals that cater to all dietary preferences.
+        </p>
+        <div>
+          <figure>
+            <img src="/img/unsplash_n8vDuIpGb0c.png" alt="" />
+            <figcaption>
+              <h3>100% Organic & Locally Sourced</h3>
+              <p>
+                Every dish is made from pure, sustainably grown ingredients. No
+                chemicals, no preservatives—just food the way nature intended.
+              </p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="/img/unsplash_xmibn7mzXV0.png" alt="" />
+            <figcaption>
+              <h3>Eco-Friendly Practices</h3>
+              <p>
+                We’re committed to reducing our carbon footprint. From our
+                biodegradable packaging to minimizing food waste, sustainability
+                is at the heart of everything we do.
+              </p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="/img/unsplash_Orz90t6o0e4.png" alt="" />
+            <figcaption>
+              <h3>Tailored to Your Lifestyle</h3>
+              <p>
+                Vegan, gluten-free, paleo? We’ve got you covered. Our diverse
+                menu ensures that there’s something for everyone, regardless of
+                dietary preference.
+              </p>
+            </figcaption>
+          </figure>
+        </div>
+      </article>
+    </section>
   </body>
 </html>
