added new section

--- a/index.html
+++ b/index.html
@@ -243,5 +243,40 @@
         </div>
       </article>
     </section>
+    <section class="content6">
+      <div>
+        <h1>Sustainable Journey from Farm to Table at <span>Eco Eats</span></h1>
+        <div>
+          <p>
+            Our ingredients are sourced from local farms that prioritize
+            sustainable practices, ensuring every meal is not only delicious but
+            also environmentally friendly. From the moment we select our produce
+            to the time we serve your meal, quality is our top priority.
+          </p>
+          <button type="button" class="btn btn-lg px-4">
+            <font style="vertical-align: inherit"
+              ><font style="vertical-align: inherit">See All Menu</font></font
+            >
+          </button>
+        </div>
+      </div>
+      <figure>
+        <div class="img1">
+          <h3>Power Bowls</h3>
+          <p>Loaded with nutrient-packed greens, grains, and proteins.</p>
+        </div>
+        <div class="img2">
+          <h3>Smoothie Bliss</h3>
+          <p>Blended to perfection with superfoods and plant-based goodness.</p>
+        </div>
+        <div class="img3">
+          <h3>Organic Wraps & Salads</h3>
+          <p>
+            Fresh, light, and satisfying meals to keep you energized all day
+            long.
+          </p>
+        </div>
+      </figure>
+    </section>
   </body>
 </html>
