added new section - menu

--- a/index.html
+++ b/index.html
@@ -278,5 +278,211 @@
         </div>
       </figure>
     </section>
+    <section class="content7">
+      <div>
+        <h1>Power Bowls</h1>
+        <p>
+          Crafted with fresh, organic ingredients, each bowl is a perfect
+          balance of proteins, healthy fats, and vibrant vegetables. Whether
+          you're seeking a plant-based boost or a protein-packed meal, our Power
+          Bowls provide wholesome, delicious options that nourish and satisfy.
+        </p>
+      </div>
+      <div class="menu">
+        <figure>
+          <img src="/img/Image.png" alt="" />
+          <figcaption>
+            <h4>Green Energy Bowl</h4>
+            <p>Packed with superfoods to fuel your day.</p>
+            <div>
+              <h3>$10.99</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image+Avatar.png" alt="" />
+          <figcaption>
+            <h4>Mediterranean Bliss Bowl</h4>
+            <p>A taste of the Mediterranean, bursting with flavor.</p>
+            <div>
+              <h3>$11.49</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image (1).png" alt="" />
+          <figcaption>
+            <h4>Protein Powerhouse Bowl</h4>
+            <p>The perfect balance of protein and nutrition.</p>
+            <div>
+              <h3>$12.49</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image (2).png" alt="" />
+          <figcaption>
+            <h4>Tropical Bowl</h4>
+            <p>A refreshing blend of tropical flavors.</p>
+            <div>
+              <h3>$11.99</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+    <section class="content7">
+      <div>
+        <h1>Power Bowls</h1>
+        <p>
+          Crafted with fresh, organic ingredients, each bowl is a perfect
+          balance of proteins, healthy fats, and vibrant vegetables. Whether
+          you're seeking a plant-based boost or a protein-packed meal, our Power
+          Bowls provide wholesome, delicious options that nourish and satisfy.
+        </p>
+      </div>
+      <div class="menu">
+        <figure>
+          <img src="/img/Image.png" alt="" />
+          <figcaption>
+            <h4>Green Energy Bowl</h4>
+            <p>Packed with superfoods to fuel your day.</p>
+            <div>
+              <h3>$10.99</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image+Avatar.png" alt="" />
+          <figcaption>
+            <h4>Mediterranean Bliss Bowl</h4>
+            <p>A taste of the Mediterranean, bursting with flavor.</p>
+            <div>
+              <h3>$11.49</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image (1).png" alt="" />
+          <figcaption>
+            <h4>Protein Powerhouse Bowl</h4>
+            <p>The perfect balance of protein and nutrition.</p>
+            <div>
+              <h3>$12.49</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image (2).png" alt="" />
+          <figcaption>
+            <h4>Tropical Bowl</h4>
+            <p>A refreshing blend of tropical flavors.</p>
+            <div>
+              <h3>$11.99</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+    <section class="content7">
+      <div>
+        <h1>Power Bowls</h1>
+        <p>
+          Crafted with fresh, organic ingredients, each bowl is a perfect
+          balance of proteins, healthy fats, and vibrant vegetables. Whether
+          you're seeking a plant-based boost or a protein-packed meal, our Power
+          Bowls provide wholesome, delicious options that nourish and satisfy.
+        </p>
+      </div>
+      <div class="menu">
+        <figure>
+          <img src="/img/Image.png" alt="" />
+          <figcaption>
+            <h4>Green Energy Bowl</h4>
+            <p>Packed with superfoods to fuel your day.</p>
+            <div>
+              <h3>$10.99</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image+Avatar.png" alt="" />
+          <figcaption>
+            <h4>Mediterranean Bliss Bowl</h4>
+            <p>A taste of the Mediterranean, bursting with flavor.</p>
+            <div>
+              <h3>$11.49</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image (1).png" alt="" />
+          <figcaption>
+            <h4>Protein Powerhouse Bowl</h4>
+            <p>The perfect balance of protein and nutrition.</p>
+            <div>
+              <h3>$12.49</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="/img/Image (2).png" alt="" />
+          <figcaption>
+            <h4>Tropical Bowl</h4>
+            <p>A refreshing blend of tropical flavors.</p>
+            <div>
+              <h3>$11.99</h3>
+              <button type="button" class="btn btn-warning">Order Now</button>
+            </div>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+    <section class="content8">
+      <div>
+        <div>
+          <h1>What Our Customers Are Saying</h1>
+          <img src="/img/unsplash_r_VLi4NDa9c.png" alt="" />
+        </div>
+        <div class="text">
+          <img
+            src="/img/Highlight-Quote-Left--Streamline-Beveled-Scribbles.png"
+            alt=""
+          />
+          <div>
+            <h3>
+              Eco Eats has completely transformed the way I eat! The food is
+              fresh, flavorful, and I love knowing that everything is 100%
+              organic. My go-to for a quick, healthy meal!
+            </h3>
+            <p>— Sarah M., Loyal Customer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      
+  </section>
+    
   </body>
 </html>
