--- a/index.html
+++ b/index.html
@@ -93,24 +93,23 @@
         </div>
       </div>
     </header>
-
-    <section class="foto">
-      <figure>
-        <img class="img-fluid" src="/img/unsplash_30kYZsukwsk.png" alt="foto" />
-      </figure>
-      <figure>
-        <img class="img-fluid" src="/img/unsplash_9jdyCy-bMC4.png" alt="foto" />
-      </figure>
-      <figure>
-        <img class="img-fluid" src="/img/unsplash_kvp1Ppohv9I.png" alt="foto" />
-      </figure>
-      <figure>
-        <img class="img-fluid" src="/img/unsplash_oaz0raysASk.png" alt="foto" />
-      </figure>
-    </section>
-
-    <section class="content2">
-      <article class="content">
+    <section>
+      <div class="foto" >
+        <figure>
+          <img class="img-fluid" src="/img/unsplash_30kYZsukwsk.png" alt="foto" />
+        </figure>
+        <figure>
+          <img class="img-fluid" src="/img/unsplash_9jdyCy-bMC4.png" alt="foto" />
+        </figure>
+        <figure>
+          <img class="img-fluid" src="/img/unsplash_kvp1Ppohv9I.png" alt="foto" />
+        </figure>
+        <figure>
+          <img class="img-fluid" src="/img/unsplash_oaz0raysASk.png" alt="foto" />
+        </figure>
+      </div>
+    <div class="content" >
+      <article class="content2">
         <h1>
           The Amazing Benefits of Choosing <span>Eco Eats</span> for Your Meals
         </h1>
@@ -145,8 +144,8 @@
           <img src="/img/unsplash_Bo8zk1NObt8.png" alt="" />
         </figure>
       </article>
-    </section>
-    <section class="content4">
+    </div>  
+    <div class="content4">
       <h1>
         At <span>Eco Eats</span>, we’re proud of our journey towards <br />
         creating a healthier, more sustainable world.
@@ -196,8 +195,8 @@
           </p>
         </div>
       </div>
-    </section>
-    <section class="content5">
+    </div>
+    <div class="content5">
       <article>
         <h1>Why Choose <span>Eco Eats?</span></h1>
         <p>
@@ -242,8 +241,8 @@
           </figure>
         </div>
       </article>
-    </section>
-    <section class="content6">
+    </div>
+    <div class="content6">
       <div>
         <h1>Sustainable Journey from Farm to Table at <span>Eco Eats</span></h1>
         <div>
@@ -277,8 +276,8 @@
           </p>
         </div>
       </figure>
-    </section>
-    <section class="content7">
+    </div>
+    <div class="content7">
       <div>
         <h1>Power Bowls</h1>
         <p>
@@ -337,8 +336,8 @@
           </figcaption>
         </figure>
       </div>
-    </section>
-    <section class="content7">
+    </div>
+    <div class="content7">
       <div>
         <h1>Power Bowls</h1>
         <p>
@@ -397,68 +396,8 @@
           </figcaption>
         </figure>
       </div>
-    </section>
-    <section class="content7">
-      <div>
-        <h1>Power Bowls</h1>
-        <p>
-          Crafted with fresh, organic ingredients, each bowl is a perfect
-          balance of proteins, healthy fats, and vibrant vegetables. Whether
-          you're seeking a plant-based boost or a protein-packed meal, our Power
-          Bowls provide wholesome, delicious options that nourish and satisfy.
-        </p>
-      </div>
-      <div class="menu">
-        <figure>
-          <img src="/img/Image.png" alt="" />
-          <figcaption>
-            <h4>Green Energy Bowl</h4>
-            <p>Packed with superfoods to fuel your day.</p>
-            <div>
-              <h3>$10.99</h3>
-              <button type="button" class="btn btn-warning">Order Now</button>
-            </div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="/img/Image+Avatar.png" alt="" />
-          <figcaption>
-            <h4>Mediterranean Bliss Bowl</h4>
-            <p>A taste of the Mediterranean, bursting with flavor.</p>
-            <div>
-              <h3>$11.49</h3>
-              <button type="button" class="btn btn-warning">Order Now</button>
-            </div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="/img/Image (1).png" alt="" />
-          <figcaption>
-            <h4>Protein Powerhouse Bowl</h4>
-            <p>The perfect balance of protein and nutrition.</p>
-            <div>
-              <h3>$12.49</h3>
-              <button type="button" class="btn btn-warning">Order Now</button>
-            </div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="/img/Image (2).png" alt="" />
-          <figcaption>
-            <h4>Tropical Bowl</h4>
-            <p>A refreshing blend of tropical flavors.</p>
-            <div>
-              <h3>$11.99</h3>
-              <button type="button" class="btn btn-warning">Order Now</button>
-            </div>
-          </figcaption>
-        </figure>
-      </div>
-    </section>
-    <section class="content8">
+    </div>
+    <div class="content8">
       <div>
         <div>
           <h1>What Our Customers Are Saying</h1>
@@ -479,8 +418,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="content9">
+    </div>
+    <div class="address">
       <div>
         <h1>Power Bowls</h1>
         <p>
@@ -548,7 +487,8 @@
           <button type="button" class="btn btn-warning">Reserve Now</button>
         </form>
       </div>
-    </section>
+    </div>
+  </section>
     <footer>
 
       <div class="footer">
@@ -577,7 +517,6 @@
         <li>Privacy Policy</li>
         <li>Cancellation Policy</li>
       </ul>
-
       <div>
         <p>Follow Us</p>
         <img src="/img/Frame 427319178.png" alt="">
