--- a/index.html
+++ b/index.html
@@ -13,14 +13,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <button id="myButton">Натисни мене</button>
-    <script>
-      const button = document.querySelector("#myButton");
-      button.addEventListener("click", () => {
-        document.body.classList.toggle("dark-theme");
-      });
-    </script>
-
     <nav class="navbar navbar-expand-sm sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -45,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Our Story</a>
@@ -63,6 +55,68 @@
           <button type="button" class="login btn btn-outline-warning">
             Join
           </button>
+
+          <label
+            for="themeToggle"
+            class="themeToggle st-sunMoonThemeToggleBtn"
+            type="checkbox"
+          >
+            <input type="checkbox" id="themeToggle" class="themeToggleInput" />
+            <svg
+              width="18"
+              height="18"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+              stroke="none"
+            >
+              <mask id="moon-mask">
+                <rect x="0" y="0" width="20" height="20" fill="white"></rect>
+                <circle cx="11" cy="3" r="8" fill="black"></circle>
+              </mask>
+              <circle
+                class="sunMoon"
+                cx="10"
+                cy="10"
+                r="8"
+                mask="url(#moon-mask)"
+              ></circle>
+              <g>
+                <circle class="sunRay sunRay1" cx="18" cy="10" r="1.5"></circle>
+                <circle
+                  class="sunRay sunRay2"
+                  cx="14"
+                  cy="16.928"
+                  r="1.5"
+                ></circle>
+                <circle
+                  class="sunRay sunRay3"
+                  cx="6"
+                  cy="16.928"
+                  r="1.5"
+                ></circle>
+                <circle class="sunRay sunRay4" cx="2" cy="10" r="1.5"></circle>
+                <circle
+                  class="sunRay sunRay5"
+                  cx="6"
+                  cy="3.1718"
+                  r="1.5"
+                ></circle>
+                <circle
+                  class="sunRay sunRay6"
+                  cx="14"
+                  cy="3.1718"
+                  r="1.5"
+                ></circle>
+              </g>
+            </svg>
+          </label>
+
+          <script>
+            const button = document.querySelector("#themeToggle");
+            button.addEventListener("click", () => {
+              document.body.classList.toggle("dark-theme");
+            });
+          </script>
         </div>
       </div>
     </nav>
