--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" type="text/css" href="nav.css" />
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-sm sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
+        <div class="dark-topic"></div>
         <a class="navbar-brand" href="#">
           <img
             src="/img/logo.png"
@@ -25,40 +25,7 @@
           />
           EcoEats
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Our Story</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Menu Options</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Vegan Dishes</a>
-            </li>
-          </ul>
-          <button type="button" class="login btn btn-outline-warning">
-            Order
-          </button>
-          <button type="button" class="login btn btn-outline-warning">
-            Join
-          </button>
-
-          <label
+        <label
             for="themeToggle"
             class="themeToggle st-sunMoonThemeToggleBtn"
             type="checkbox"
@@ -112,6 +79,43 @@
               </g>
             </svg>
           </label>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Story</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menu Options</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Vegan Dishes</a>
+            </li>
+            <li class="nav-item">
+              <button type="button" class="login btn btn-outline-warning">
+                Order
+              </button>
+            </li>
+            <li class="nav-item">
+              <button type="button" class="login btn btn-outline-warning">
+                Join
+              </button>
+            </li>
+          </ul>
           <script>
             const button = document.querySelector("#themeToggle");
             button.addEventListener("click", () => {
@@ -595,5 +599,10 @@
         <img src="/img/Frame 427319178.png" alt="" />
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
